# nix-backpack-problem

./: .gitignore  cabal.project  flake.nix
main-package/: CHANGELOG.md  main-package.cabal
main-package/src/: MyLib.hs-sig
my-dependency/: CHANGELOG.md  my-dependency.cabal
my-dependency/src/Dep/: MyLib.hs
