cabal-version:      3.4
name:               main-package
version:            0.1.0.0
-- synopsis:
-- description:
license:            MPL-2.0
license-file:       LICENSE
author:             Andrei Borzenkov
maintainer:         andreyborzenkov2002@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    signatures:  MyLib

    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: GHC2021

executable main-package
    import:           warnings
    main-is:          Main.hs

    mixins:
      my-dependency (Dep.MyLib as MyLib)

    build-depends:
        base ^>=4.17.2.0,
        main-package,
        my-dependency

    hs-source-dirs:   app
    default-language: GHC2021
